[project]
name = "hark"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "faster-whisper",
  "requests",
]

[project.scripts]
saa_notes = "saa_notes:main"
live_transcribe = "live_transcribe:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools]
py-modules = ["saa_notes", "live_transcribe"]
